--- a/client/src/app/coins/_mobile.scss
+++ b/client/src/app/coins/_mobile.scss
@@ -43,6 +43,14 @@
                         min-width: 20px;
                         border-left: 1px solid $app-color;
                     }
+                    &.details{
+                        max-width: 88px;
+                        .name{
+                            font-size: 12px;
+                            overflow: hidden;
+                            text-overflow: ellipsis;
+                        }                        
+                    }
                     &.logo{
                         min-width: 42px;
                     }
